2006-09-26  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("shell"): use xterm

	* core.lisp (expand-frame): dont quote symbols in ecase
	(expand-tree): likewise
	(resize-frame): likewise

	* user.lisp (run-or-raise): new function
	("shell"): new command
	("web"): new command

2006-08-30  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("only"): hide windows not in the focused frame.
	(choose-frame-by-number): use get-frame-number-translation to
	search for a matching frame
	(parse-and-run-command): likewise

	* primitives.lisp (*focus-frame-hook*): new hook
	(*frame-number-map*): new global variable
	(get-frame-number-translation): new function

	* core.lisp (focus-frame): call *focus-frame-hook* hooks
	(draw-frame-numbers): use get-frame-number-translation for the frame's "id"

2006-08-17  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): bind up, down, left, right to move focus in the corresponding direction.
	(find-closest-frame): new function
	("move-focus"): new command

2006-06-22  sabetts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (stumpwm): call update-modifier-map

	* primitives.lisp (*all-modifiers*): new global
	(*modifiers*): likewise
	(screen): remove modifiers slot

	* kmap.lisp (x11-mods): handle meta alt syper and super modifiers

	* input.lisp (code-state->key): handle meta alt syper and super modifiers
	(all-modifier-codes): new function
	(get-modifier-map): new function
	(update-modifier-map): call all-modifier-codes and get-modifier-map

	* core.lisp (:mapping-notify): new event handler

2006-05-07  Shawn Betts  <sabetts@vcn.bc.ca>

	* kmap.lisp (print-key): call keysym->stumpwm-name

	* keytrans.lisp (keysym-name->stumpwm-name): new function
	(keysym->stumpwm-name): likewise

2006-05-06  Shawn Betts  <sabetts@vcn.bc.ca>

	* input.lisp (*input-map*): use DEL to refer to the backspace
	key. New binding, Delete. use RET to refer to the return key.
	(input-self-insert): report an error if the keysym is not associated with a character
